--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/mm-chinese-popup-un-TESTBUILD.loader.js";
       var config = {
-        dataUrl: buildUrl + "/mm-chinese-popup-un-TESTBUILD.data",
+        dataUrl: "https://media.githubusercontent.com/media/metamindsgroup/mm-chinese-popup-un-TESTBUILD/main/Build/mm-chinese-popup-un-TESTBUILD.data",
         frameworkUrl: buildUrl + "/mm-chinese-popup-un-TESTBUILD.framework.js",
         codeUrl: buildUrl + "/mm-chinese-popup-un-TESTBUILD.wasm",
         streamingAssetsUrl: "StreamingAssets",
